Creación de paquetes. Adición de dependencias en el pom.xml Creacion de clases por paquetes Configuracion de Cors Configuration y adicion de metodos Creacion de DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=foro_hub_alura
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}/foro_hub_alura
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.inlcude-stacktrace=never
+spring.main.allow-circular-references=true
